[tool.poetry]
name = "python-semrush"
version = "0.1.0"
description = ""
authors = ["Tulio Cesar Martins Pereira <funroll.loops@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
